few more packages has been added for validations

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "yup": "^1.6.1"
   },
   "name": "lmsbackendts",
   "version": "1.0.0",
