--- a/package.json
+++ b/package.json
@@ -1,35 +1,33 @@
 {
+  "dependencies": {
+    "bcryptjs": "^3.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
+    "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.10.1",
+    "winston": "^3.17.0"
+  },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
-    "@types/helmet": "^0.0.48",
     "@types/jsonwebtoken": "^9.0.8",
-    "@types/mongoose": "^5.11.96",
-    "@types/morgan": "^1.9.9",
-    "@types/node": "^22.13.2",
+    "@types/node": "^22.13.4",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "helmet": "^8.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0",
-    "morgan": "^1.10.0",
-    "yup": "^1.6.1"
-  },
   "name": "lmsbackendts",
   "version": "1.0.0",
-  "description": "The Backend for LMS with Node and express , using TypeScript for type safety and follow onion architecture and SOLID principles",
-  "main": "server.ts",
+  "description": "The LMS backend server created by @muntazircodes in TS and Mongoose following Onion Architecture and SOLID Principles",
+  "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node dist/server.js",
+  "dev": "nodemon --exec ts-node src/server.ts"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/muntazircodes/LmsBackendTS.git"
