--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
     "winston": "^3.17.0"
   },
   "devDependencies": {
@@ -15,6 +16,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.4",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
@@ -23,11 +25,11 @@
   "name": "lmsbackendts",
   "version": "1.0.0",
   "description": "The LMS backend server created by @muntazircodes in TS and Mongoose following Onion Architecture and SOLID Principles",
-  "main": "dist/server.js",
+  "main": "server.ts",
   "scripts": {
-  "start": "node dist/server.js",
-  "dev": "nodemon --exec ts-node src/server.ts"
-},
+    "start": "node dist/server.js",
+    "dev": "nodemon --exec ts-node server.ts"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/muntazircodes/LmsBackendTS.git"
